PS-1920: Azure Storage Documentation
* new section for using azure blob storage
* upgraded mint.json file to new docs.json format
* bit of other cleanup and linking of pages

--- a/implementation/pilot-process.mdx
+++ b/implementation/pilot-process.mdx
@@ -5,7 +5,10 @@ icon: 'paper-plane'
 ---
 
 # Objective
-The primary objective of this Proof of Concept is to showcase how the Connective Health Care Summary can address key challenges and enhance operational efficiency in your care delivery. Through a controlled and focused implementation, we aim to provide tangible evidence of the product's capabilities in improving user experience, patient care, and workflow efficiency.
+The primary objective of this Proof of Concept is to showcase how the Connective Health Care Summary can address key
+challenges and enhance operational efficiency in your care delivery. Through a controlled and focused implementation,
+we aim to provide tangible evidence of the product's capabilities in improving user experience, patient care,
+and workflow efficiency.
 
 # High-Level Steps
 
