--- a/product/fhir-data.mdx
+++ b/product/fhir-data.mdx
@@ -20,8 +20,8 @@ In the event that the source data does not satisfy FHIR or US Core profile valid
 ## Push
 
 Customer is able to have a FHIR bundle pushed to them:
-* Via an S3 bucket (currently available)
-* Azure (soon to be available)
+* S3 bucket (currently available)
+* Azure (currently available)
 * Google Cloud Storage (soon to be available)
 
 ## Pull
