--- a/product/introduction.mdx
+++ b/product/introduction.mdx
@@ -16,8 +16,8 @@ For example, a customer may want a Care Summary delivered two weeks after each v
 
 ## Content delivery method
 
-* Within the EHR as a chart attachment
-* File directories, e.g. Amazon S3
+* [Within the EHR](/clinical-direct-messaging) as a chart attachment
+* [Cloud storage](/responses/cloud-storage), e.g. Amazon S3
 
 ## Population vs. individual patient visits
 
