PS-1916, PS-1919: Metabolic, Spinal Templates

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,12 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-05-20" description="v3.5.0">
+    ## Documentation
+    * New diagnostic category added: metabolic
+    * New diagnostic category added: spinal
+</Update>
+
 <Update label="2025-04-21" description="v3.4.1">
     ## Bug Fixes
     * Enforce maximum number of patient addresses is 3
