PS-1995: Added the ProviderNpi value to configurable file path template

--- a/responses/cloud-storage.mdx
+++ b/responses/cloud-storage.mdx
@@ -28,6 +28,7 @@ to decide what this configuration should be.
 | `patientFirstName` | Patient first name                                             |
 | `patientLastName`  | Patient last name                                              |
 | `mrn`              | Patient MRN                                                    |
+| `providerNpi`      | Provider NPI                                                   |
 | `correlationId`    | Connective Health Correlation ID                               |
 | `yyyy`             | Four-digit year                                                |
 | `MM`               | Two-digit month                                                |
