PS-2012: Add new storage template file path variables (#53)
* PS-2012: Add new storage template file path variables

* Provider First Name
* Provider Last Name
* Clinic Name

--- a/responses/cloud-storage.mdx
+++ b/responses/cloud-storage.mdx
@@ -23,18 +23,21 @@ to decide what this configuration should be.
 
 #### Available Dynamic Values
 
-| Property           | Description                                                    |
-|--------------------|----------------------------------------------------------------|
-| `patientFirstName` | Patient first name                                             |
-| `patientLastName`  | Patient last name                                              |
-| `mrn`              | Patient MRN                                                    |
-| `providerNpi`      | Provider NPI                                                   |
-| `correlationId`    | Connective Health Correlation ID                               |
-| `yyyy`             | Four-digit year                                                |
-| `MM`               | Two-digit month                                                |
-| `dd`               | Two-digit day                                                  |
-| `documentType`     | Document type. Required to be part of the configured location  |
-| `ext`              | File extension. Required to be part of the configured location |
+| Property            | Description                                                    |
+|---------------------|----------------------------------------------------------------|
+| `patientFirstName`  | Patient first name                                             |
+| `patientLastName`   | Patient last name                                              |
+| `mrn`               | Patient MRN                                                    |
+| `clinicName`        | Clinic name                                                    |
+| `providerNpi`       | Provider NPI                                                   |
+| `providerFirstName` | Provider first name                                            |
+| `providerLastName`  | Provider last name                                             |
+| `correlationId`     | Connective Health Correlation ID                               |
+| `yyyy`              | Four-digit year                                                |
+| `MM`                | Two-digit month                                                |
+| `dd`                | Two-digit day                                                  |
+| `documentType`      | Document type. Required to be part of the configured location  |
+| `ext`               | File extension. Required to be part of the configured location |
 
 ## AWS S3
 
