PS-2015, PS-2116, PS-2127: Update for new validations (API v3.5.1)

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,13 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-05-20" description="v3.5.1">
+    ## Bug Fixes
+    * Enforce patient birth date is no more than 125 years ago
+    * Enforce patient zip codes is not 00000
+    * Enforce Patient IDs do not contain parentheses
+</Update>
+
 <Update label="2025-05-20" description="v3.5.0">
     ## Documentation
     * New diagnostic category added: metabolic
